prevent files path overflow on mobile devices

--- a/intranet/static/css/files.scss
+++ b/intranet/static/css/files.scss
@@ -79,6 +79,13 @@ table.directory-list {
     }
 }
 
+.current-directory {
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    direction: rtl;
+    text-align: left;
+}
+
 #additional-upload-option {
     padding-left: 5px;
     display: none;
